# spacy-experimental

./: MANIFEST.in  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
biaffine_parser/: biaffine_model.py  biaffine_parser.pyx  biaffine_parser_pipe.pxd  biaffine_parser_pipe.pyx  custom_functions.py  eval.py  pytorch_biaffine_model.py
biaffine_parser/tests/: test_biaffine_parser.py  test_mst.py
project/: project.yml
project/configs/: base-config.cfg
projects/biaffine_parser/: README.md  project.yml  requirements.txt
projects/biaffine_parser/configs/: base-config-transition.cfg  base-config.cfg
projects/edit_tree_lemmatizer/: README.md  project.yml
projects/span_boundary_detection/: .gitignore  README.md  project.yml
projects/span_boundary_detection/configs/: config_sbd_suggester.cfg
projects/span_boundary_detection/configs/sbd/: config_tok2vec copy.cfg  config_tok2vec.cfg  config_trf.cfg
projects/span_boundary_detection/configs/sbd/genia/: config_tok2vec.cfg  config_trf.cfg
projects/span_boundary_detection/configs/sbd/healthsea/: config_tok2vec.cfg  config_trf.cfg
projects/span_boundary_detection/configs/sbd/toxic/: config_tok2vec.cfg  config_trf.cfg
projects/span_boundary_detection/configs/spancat/: config_tok2vec_ngram.cfg  config_tok2vec_sbd.cfg  config_trf_ngram.cfg
projects/span_boundary_detection/configs/spancat/genia/: config_tok2vec_ngram.cfg  config_tok2vec_sbd.cfg  config_trf_ngram.cfg  config_trf_sbd.cfg
projects/span_boundary_detection/configs/spancat/healthsea/: config_trf_sbd.cfg
projects/span_boundary_detection/configs/spancat/toxic/: config_tok2vec_sbd.cfg  config_trf_ngram.cfg
projects/span_boundary_detection/configs/subtree/: config_subtree_suggester.cfg
projects/span_boundary_detection/scripts/: custom_code.py  evaluation.py  sbd_component.py  sbd_model.py
projects/span_boundary_detection/scripts/preprocessing/: preprocess_ebm.py  preprocess_genia.py  preprocess_healthsea.py  preprocess_toxic.py
projects/span_finder/: .gitignore  README.md  profile.sh  project.yml
projects/span_finder/configs/ngram/: config_tok2vec.cfg  config_trf.cfg
projects/span_finder/configs/shared_embedding/: config_tok2vec.cfg
projects/span_finder/configs/span_finder/: config_tok2vec.cfg  config_trf.cfg
projects/span_finder/configs/spancat/: config_tok2vec_span_finder.cfg  config_trf_ngram.cfg  config_trf_span_finder.cfg
projects/span_finder/scripts/: evaluation.py  suggester_evaluation.py
projects/span_finder/scripts/preprocessing/: preprocess_genia.py  preprocess_healthsea.py  preprocess_toxic.py
projects/span_suggesters/: .gitignore  README.md  project.yml
projects/span_suggesters/configs/: chunk_suggester.cfg  sentence_suggester.cfg  subtree_suggester.cfg
rust/mst/: Cargo.toml
rust/mst/src/: lib.rs  mst.rs
spacy_biaffine_parser/: arc_labeler.pyx  arc_predicter.pyx  biaffine_model.py  bilinear.py  custom_functions.py  eval.py  mst.py  pairwise_bilinear.py  pytorch_biaffine_model.py  pytorch_bilinear.py  pytorch_pairwise_bilinear.py  util.hh
spacy_biaffine_parser/tests/: test_arc_labeler.py  test_arc_predicter.py  test_biaffine_parser.py  test_mst.py
spacy_experimental/biaffine_parser/: _util.py  arc_labeler.pyx  arc_predicter.pyx  bilinear.py  eval.py  mst.pxd  mst.pyi  mst.pyx  pairwise_bilinear.py  pyproject.toml  pytorch_bilinear.py  pytorch_pairwise_bilinear.py  with_minibatch_by_padded_size.py  with_pad_seq_unpad_matrix.py  with_splits.py
spacy_experimental/biaffine_parser/spacy_biaffine_parser/: arc_labeler.pyx  pairwise_bilinear.py
spacy_experimental/biaffine_parser/spacy_biaffine_parser/tests/: test_arc_labeler.py  test_mst.py
spacy_experimental/biaffine_parser/tests/: test_arc_labeler.py  test_arc_predicter.py  test_mst.py  test_pytorch_bilinear.py  test_with_minibatch_by_padded_size.py  test_with_pad_seq_unpad_matrix.py  test_with_splits.py  util.py
spacy_experimental/char_tokenizer/: char_ner_tokenizer.pyx  char_pretokenizer.py  char_tagger_tokenizer.pyx  scorers.py
spacy_experimental/char_tokenizer/tests/: test_char_tokenizers.py
spacy_experimental/cli/: benchmark.py
spacy_experimental/coref/: coref_component.py  coref_model.py  coref_scorer.py  coref_util.py  pytorch_coref_model.py  pytorch_span_resolver_model.py  span_predictor_component.py  span_predictor_model.py  span_resolver_component.py  span_resolver_model.py
spacy_experimental/coref/tests/: test_coref.py  test_span_predictor.py  test_span_resolver.py
spacy_experimental/edit_tree_lemmatizer/: RESULTS.md  edit_tree_lemmatizer.py  edit_trees.pxd  edit_trees.pyx
spacy_experimental/edit_tree_lemmatizer/tests/: test_edit_tree_lemmatizer_pipe.py  test_edit_trees.py
spacy_experimental/experimental_subtree_suggester/: subtree_suggester.py
spacy_experimental/multiembed/: multiembed.py  set_attr.py  token_map.py
spacy_experimental/multiembed/tests/: test_multiembed.py  test_set_attr.py
spacy_experimental/span_boundary_detection/: sbd_component.py  sbd_model.py  sbd_suggester.py
spacy_experimental/span_boundary_detection/tests/: test_model.py  test_sbd.py
spacy_experimental/span_finder/: span_finder_component.py  span_finder_model.py  span_finder_suggester.py
spacy_experimental/span_finder/tests/: test_span_finder.py
spacy_experimental/span_suggesters/: chunk_suggester.py  merge_suggesters.py  sentence_suggester.py  subtree_suggester.py
spacy_experimental/span_suggesters/subtree/: subtree_suggester.py
spacy_experimental/span_suggesters/tests/: test__suggesters.py  test_suggesters.py
