[metadata]
version = 0.4.0
description = Cutting-edge experimental spaCy components and features
url = https://github.com/explosion/spacy-experimental
author = Explosion
author_email = contact@explosion.ai
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = false
python_requires = >=3.6
install_requires =
    spacy>=3.2.0,<3.3.0

[options.entry_points]
spacy_architectures =
    spacy-experimental.Bilinear.v1 = spacy_experimental.biaffine_parser.bilinear:build_bilinear
    spacy-experimental.PairwiseBilinear.v1 = spacy_experimental.biaffine_parser.pairwise_bilinear:build_pairwise_bilinear
    spacy-experimental.span_boundary_detection_model.v1 = spacy_experimental.span_boundary_detection.sbd_model:build_boundary_model_v2
spacy_factories =
    experimental_arc_labeler = spacy_experimental.biaffine_parser.arc_labeler:make_arc_labeler
    experimental_arc_predicter = spacy_experimental.biaffine_parser.arc_predicter:make_arc_predicter
    experimental_edit_tree_lemmatizer = spacy_experimental.edit_tree_lemmatizer.edit_tree_lemmatizer:make_edit_tree_lemmatizer
    experimental_char_tagger_tokenizer = spacy_experimental.char_tokenizer.char_tagger_tokenizer:make_char_tagger_tokenizer
    experimental_char_ner_tokenizer = spacy_experimental.char_tokenizer.char_ner_tokenizer:make_char_ner_tokenizer
    experimental_span_boundary_detector = spacy_experimental.span_boundary_detection.sbd_component:make_sbd
spacy_scorers =
    spacy-experimental.tokenizer_scorer.v1 = spacy_experimental.char_tokenizer.scorers:make_tokenizer_scorer
    spacy-experimental.tokenizer_senter_scorer.v1 = spacy_experimental.char_tokenizer.scorers:make_tokenizer_senter_scorer
    spacy-experimental.span_boundary_detection_scorer.v1 = spacy_experimental.span_boundary_detection.sbd_component:make_sbd_scorer
spacy_tokenizers =
    spacy-experimental.char_pretokenizer.v1 = spacy_experimental.char_tokenizer.char_pretokenizer:char_pretokenizer_v1
spacy_misc =
    spacy-experimental.span_boundary_detection_suggester.v1 = spacy_experimental.span_boundary_detection.sbd_suggester:build_sbd_suggester

[options.extras_require]
torch =
    torch>=1.5.0

[bdist_wheel]
universal = false

[sdist]
formats = gztar
