[metadata]
version = 0.6.2
description = Cutting-edge experimental spaCy components and features
url = https://github.com/explosion/spacy-experimental
author = Explosion
author_email = contact@explosion.ai
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = false
python_requires = >=3.6
install_requires =
    spacy>=4.0.0.dev0,<4.1.0

[options.entry_points]
spacy_architectures =
    spacy-experimental.Bilinear.v1 = spacy_experimental.biaffine_parser.bilinear:build_bilinear
    spacy-experimental.PairwiseBilinear.v1 = spacy_experimental.biaffine_parser.pairwise_bilinear:build_pairwise_bilinear
    spacy-experimental.SpanFinder.v1 = spacy_experimental.span_finder.span_finder_model:build_finder_model
    spacy-experimental.Coref.v1 = spacy_experimental.coref.coref_model:build_coref_model
    spacy-experimental.SpanResolver.v1 = spacy_experimental.coref.span_resolver_model:build_span_resolver
spacy_factories =
    experimental_arc_labeler = spacy_experimental.biaffine_parser.arc_labeler:make_arc_labeler
    experimental_arc_predicter = spacy_experimental.biaffine_parser.arc_predicter:make_arc_predicter
    experimental_char_tagger_tokenizer = spacy_experimental.char_tokenizer.char_tagger_tokenizer:make_char_tagger_tokenizer
    experimental_char_ner_tokenizer = spacy_experimental.char_tokenizer.char_ner_tokenizer:make_char_ner_tokenizer
    experimental_span_finder = spacy_experimental.span_finder.span_finder_component:make_span_finder
    experimental_coref = spacy_experimental.coref.coref_component:make_coref
    experimental_span_resolver = spacy_experimental.coref.span_resolver_component:make_span_resolver
    experimental_span_cleaner = spacy_experimental.coref.coref_util:make_span_cleaner
spacy_scorers =
    spacy-experimental.tokenizer_scorer.v1 = spacy_experimental.char_tokenizer.scorers:make_tokenizer_scorer
    spacy-experimental.tokenizer_senter_scorer.v1 = spacy_experimental.char_tokenizer.scorers:make_tokenizer_senter_scorer
    spacy-experimental.span_finder_scorer.v1 = spacy_experimental.span_finder.span_finder_component:make_span_finder_scorer
    spacy-experimental.coref_scorer.v1 = spacy_experimental.coref.coref_component:make_coref_scorer
    spacy-experimental.span_resolver_scorer.v1 = spacy_experimental.coref.span_resolver_component:make_span_resolver_scorer
spacy_tokenizers =
    spacy-experimental.char_pretokenizer.v1 = spacy_experimental.char_tokenizer.char_pretokenizer:char_pretokenizer_v1
spacy_misc =
    spacy-experimental.span_finder_suggester.v1 = spacy_experimental.span_finder.span_finder_suggester:build_span_finder_suggester
    spacy-experimental.subtree_suggester.v1 = spacy_experimental.span_suggesters.subtree_suggester:build_subtree_suggester
    spacy-experimental.ngram_subtree_suggester.v1 = spacy_experimental.span_suggesters.subtree_suggester:build_ngram_subtree_suggester
    spacy-experimental.chunk_suggester.v1 = spacy_experimental.span_suggesters.chunk_suggester:build_chunk_suggester
    spacy-experimental.ngram_chunk_suggester.v1 = spacy_experimental.span_suggesters.chunk_suggester:build_ngram_chunk_suggester
    spacy-experimental.sentence_suggester.v1 = spacy_experimental.span_suggesters.sentence_suggester:build_sentence_suggester
    spacy-experimental.ngram_sentence_suggester.v1 = spacy_experimental.span_suggesters.sentence_suggester:build_ngram_sentence_suggester



[options.extras_require]
torch =
    torch>=1.5.0

[bdist_wheel]
universal = false

[sdist]
formats = gztar

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
plugins = pydantic.mypy, thinc.mypy
allow_redefinition = True
